Refactoring isEmpty utilization to isPresent with optionals